--- a/cn.zh-cn/API参考/查询主机配置数据.md
+++ b/cn.zh-cn/API参考/查询主机配置数据.md
@@ -9,22 +9,22 @@
 
 ## URI<a name="section5658454014325"></a>
 
--   URI格式
-
-    GET /V1.0/\{project\_id\}/event-data
+GET /V1.0/\{project\_id\}/event-data
 
 -   参数说明
 
+    **表 1**  参数说明
+
     <a name="table75058417558"></a>
-    <table><thead align="left"><tr id="row6325008217558"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.1.3.1.1"><p id="p2298303317558"><a name="p2298303317558"></a><a name="p2298303317558"></a>名称</p>
+    <table><thead align="left"><tr id="row6325008217558"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.2.3.1.1"><p id="p2298303317558"><a name="p2298303317558"></a><a name="p2298303317558"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.1.3.1.2"><p id="p6517651717558"><a name="p6517651717558"></a><a name="p6517651717558"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.2.3.1.2"><p id="p6517651717558"><a name="p6517651717558"></a><a name="p6517651717558"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row4480653817558"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.1.3.1.1 "><p id="p545094717558"><a name="p545094717558"></a><a name="p545094717558"></a>project_id</p>
+    <tbody><tr id="row4480653817558"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.2.3.1.1 "><p id="p545094717558"><a name="p545094717558"></a><a name="p545094717558"></a>project_id</p>
     </td>
-    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.1.3.1.2 "><p id="p6175070717558"><a name="p6175070717558"></a><a name="p6175070717558"></a>项目编号。</p>
+    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.2.3.1.2 "><p id="p6175070717558"><a name="p6175070717558"></a><a name="p6175070717558"></a>项目编号。</p>
     </td>
     </tr>
     </tbody>
@@ -99,53 +99,52 @@
     /V1.0/{project_id}/event-data?namespace=SYS.ECS&dim.0=instance_id,33328f02-3814-422e-b688-bfdba93d4051&type=instance_host_info&from=1450234543422&to=1450320943422
     ```
 
-    >![](public_sys-resources/icon-note.gif) **说明：**   
-    >错误码说明请参见[返回错误码说明](返回错误码说明.md)。  
 
-
-## 请求<a name="section18441583143655"></a>
+## 请求消息<a name="section18441583143655"></a>
 
 无
 
-## 响应<a name="section64339306143726"></a>
+## 响应消息<a name="section64339306143726"></a>
 
--   要素说明
+-   响应参数
+
+    **表 2**  响应参数
 
     <a name="table15437449143726"></a>
-    <table><thead align="left"><tr id="row46953322143726"><th class="cellrowborder" valign="top" width="36.68927763893847%" id="mcps1.1.4.1.1"><p id="p45122727143726"><a name="p45122727143726"></a><a name="p45122727143726"></a>名称</p>
+    <table><thead align="left"><tr id="row46953322143726"><th class="cellrowborder" valign="top" width="36.68927763893847%" id="mcps1.2.4.1.1"><p id="p45122727143726"><a name="p45122727143726"></a><a name="p45122727143726"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="20.135665833630846%" id="mcps1.1.4.1.2"><p id="p33014498143726"><a name="p33014498143726"></a><a name="p33014498143726"></a>参数类型</p>
+    <th class="cellrowborder" valign="top" width="20.135665833630846%" id="mcps1.2.4.1.2"><p id="p33014498143726"><a name="p33014498143726"></a><a name="p33014498143726"></a>参数类型</p>
     </th>
-    <th class="cellrowborder" valign="top" width="43.17505652743068%" id="mcps1.1.4.1.3"><p id="p56928688143726"><a name="p56928688143726"></a><a name="p56928688143726"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="43.17505652743068%" id="mcps1.2.4.1.3"><p id="p56928688143726"><a name="p56928688143726"></a><a name="p56928688143726"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row47821055143726"><td class="cellrowborder" valign="top" width="36.68927763893847%" headers="mcps1.1.4.1.1 "><p id="p48300279143726"><a name="p48300279143726"></a><a name="p48300279143726"></a>datapoints</p>
+    <tbody><tr id="row47821055143726"><td class="cellrowborder" valign="top" width="36.68927763893847%" headers="mcps1.2.4.1.1 "><p id="p48300279143726"><a name="p48300279143726"></a><a name="p48300279143726"></a>datapoints</p>
     </td>
-    <td class="cellrowborder" valign="top" width="20.135665833630846%" headers="mcps1.1.4.1.2 "><p id="p10076671143726"><a name="p10076671143726"></a><a name="p10076671143726"></a>JSON数组</p>
+    <td class="cellrowborder" valign="top" width="20.135665833630846%" headers="mcps1.2.4.1.2 "><p id="p10076671143726"><a name="p10076671143726"></a><a name="p10076671143726"></a>JSON数组</p>
     </td>
-    <td class="cellrowborder" valign="top" width="43.17505652743068%" headers="mcps1.1.4.1.3 "><p id="p44571010143741"><a name="p44571010143741"></a><a name="p44571010143741"></a>配置信息列表。如果不存在对应的配置信息，则datapoints为空数组[]。</p>
-    </td>
-    </tr>
-    <tr id="row31027428143726"><td class="cellrowborder" valign="top" width="36.68927763893847%" headers="mcps1.1.4.1.1 "><p id="p14043162143758"><a name="p14043162143758"></a><a name="p14043162143758"></a>type</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="20.135665833630846%" headers="mcps1.1.4.1.2 "><p id="p63825717143758"><a name="p63825717143758"></a><a name="p63825717143758"></a>字符串</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="43.17505652743068%" headers="mcps1.1.4.1.3 "><p id="p2500549143758"><a name="p2500549143758"></a><a name="p2500549143758"></a>事件类型，例如instance_host_info。</p>
+    <td class="cellrowborder" valign="top" width="43.17505652743068%" headers="mcps1.2.4.1.3 "><p id="p44571010143741"><a name="p44571010143741"></a><a name="p44571010143741"></a>配置信息列表。如果不存在对应的配置信息，则datapoints为空数组[]。</p>
     </td>
     </tr>
-    <tr id="row60905508143726"><td class="cellrowborder" valign="top" width="36.68927763893847%" headers="mcps1.1.4.1.1 "><p id="p10961008143758"><a name="p10961008143758"></a><a name="p10961008143758"></a>timestamp</p>
+    <tr id="row31027428143726"><td class="cellrowborder" valign="top" width="36.68927763893847%" headers="mcps1.2.4.1.1 "><p id="p14043162143758"><a name="p14043162143758"></a><a name="p14043162143758"></a>type</p>
     </td>
-    <td class="cellrowborder" valign="top" width="20.135665833630846%" headers="mcps1.1.4.1.2 "><p id="p41582309143758"><a name="p41582309143758"></a><a name="p41582309143758"></a>时间戳</p>
+    <td class="cellrowborder" valign="top" width="20.135665833630846%" headers="mcps1.2.4.1.2 "><p id="p63825717143758"><a name="p63825717143758"></a><a name="p63825717143758"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="43.17505652743068%" headers="mcps1.1.4.1.3 "><p id="p12723881143758"><a name="p12723881143758"></a><a name="p12723881143758"></a>事件上报时间。</p>
+    <td class="cellrowborder" valign="top" width="43.17505652743068%" headers="mcps1.2.4.1.3 "><p id="p2500549143758"><a name="p2500549143758"></a><a name="p2500549143758"></a>事件类型，例如instance_host_info。</p>
     </td>
     </tr>
-    <tr id="row64419200143726"><td class="cellrowborder" valign="top" width="36.68927763893847%" headers="mcps1.1.4.1.1 "><p id="p14686052143758"><a name="p14686052143758"></a><a name="p14686052143758"></a>value</p>
+    <tr id="row60905508143726"><td class="cellrowborder" valign="top" width="36.68927763893847%" headers="mcps1.2.4.1.1 "><p id="p10961008143758"><a name="p10961008143758"></a><a name="p10961008143758"></a>timestamp</p>
     </td>
-    <td class="cellrowborder" valign="top" width="20.135665833630846%" headers="mcps1.1.4.1.2 "><p id="p53971240143758"><a name="p53971240143758"></a><a name="p53971240143758"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="20.135665833630846%" headers="mcps1.2.4.1.2 "><p id="p41582309143758"><a name="p41582309143758"></a><a name="p41582309143758"></a>时间戳</p>
     </td>
-    <td class="cellrowborder" valign="top" width="43.17505652743068%" headers="mcps1.1.4.1.3 "><p id="p9594313143758"><a name="p9594313143758"></a><a name="p9594313143758"></a>主机配置信息。</p>
+    <td class="cellrowborder" valign="top" width="43.17505652743068%" headers="mcps1.2.4.1.3 "><p id="p12723881143758"><a name="p12723881143758"></a><a name="p12723881143758"></a>事件上报时间。</p>
+    </td>
+    </tr>
+    <tr id="row64419200143726"><td class="cellrowborder" valign="top" width="36.68927763893847%" headers="mcps1.2.4.1.1 "><p id="p14686052143758"><a name="p14686052143758"></a><a name="p14686052143758"></a>value</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="20.135665833630846%" headers="mcps1.2.4.1.2 "><p id="p53971240143758"><a name="p53971240143758"></a><a name="p53971240143758"></a>字符串</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="43.17505652743068%" headers="mcps1.2.4.1.3 "><p id="p9594313143758"><a name="p9594313143758"></a><a name="p9594313143758"></a>主机配置信息。</p>
     </td>
     </tr>
     </tbody>
@@ -224,4 +223,8 @@
     </tbody>
     </table>
 
+
+## 错误码<a name="section134757259472"></a>
+
+请参考[返回错误码说明](返回错误码说明.md)。
 
