--- a/cn.zh-cn/API参考/查询已关注指标（已废弃）.md
+++ b/cn.zh-cn/API参考/查询已关注指标（已废弃）.md
@@ -6,22 +6,22 @@
 
 ## URI<a name="section62331491"></a>
 
--   URI格式
-
-    GET /V1.0/\{project\_id\}/favorite-metrics
+GET /V1.0/\{project\_id\}/favorite-metrics
 
 -   参数说明
 
+    **表 1**  参数说明
+
     <a name="table23820074175412"></a>
-    <table><thead align="left"><tr id="row17704405175412"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.1.3.1.1"><p id="p24770673175412"><a name="p24770673175412"></a><a name="p24770673175412"></a>名称</p>
+    <table><thead align="left"><tr id="row17704405175412"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.2.3.1.1"><p id="p24770673175412"><a name="p24770673175412"></a><a name="p24770673175412"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.1.3.1.2"><p id="p49831152175412"><a name="p49831152175412"></a><a name="p49831152175412"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.2.3.1.2"><p id="p49831152175412"><a name="p49831152175412"></a><a name="p49831152175412"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row9791522175412"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.1.3.1.1 "><p id="p54915841175412"><a name="p54915841175412"></a><a name="p54915841175412"></a>project_id</p>
+    <tbody><tr id="row9791522175412"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.2.3.1.1 "><p id="p54915841175412"><a name="p54915841175412"></a><a name="p54915841175412"></a>project_id</p>
     </td>
-    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.1.3.1.2 "><p id="p62453732175412"><a name="p62453732175412"></a><a name="p62453732175412"></a>项目编号。</p>
+    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.2.3.1.2 "><p id="p62453732175412"><a name="p62453732175412"></a><a name="p62453732175412"></a>项目编号。</p>
     </td>
     </tr>
     </tbody>
@@ -33,53 +33,52 @@
     /V1.0/{project_id}/favorite-metrics
     ```
 
-    >![](public_sys-resources/icon-note.gif) **说明：**   
-    >错误码说明请参见[返回错误码说明](返回错误码说明.md)。  
 
-
-## 请求<a name="section24112512"></a>
+## 请求消息<a name="section24112512"></a>
 
 无
 
-## 响应<a name="section15686020"></a>
+## 响应消息<a name="section15686020"></a>
 
--   要素说明
+-   响应参数
+
+    **表 2**  响应参数
 
     <a name="table5969686152721"></a>
-    <table><thead align="left"><tr id="row18607158152721"><th class="cellrowborder" valign="top" width="18.905647141353914%" id="mcps1.1.4.1.1"><p id="p30784793152721"><a name="p30784793152721"></a><a name="p30784793152721"></a>名称</p>
+    <table><thead align="left"><tr id="row18607158152721"><th class="cellrowborder" valign="top" width="18.905647141353914%" id="mcps1.2.4.1.1"><p id="p30784793152721"><a name="p30784793152721"></a><a name="p30784793152721"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="27.686191979422425%" id="mcps1.1.4.1.2"><p id="p48461363152721"><a name="p48461363152721"></a><a name="p48461363152721"></a>参数类型</p>
+    <th class="cellrowborder" valign="top" width="27.686191979422425%" id="mcps1.2.4.1.2"><p id="p48461363152721"><a name="p48461363152721"></a><a name="p48461363152721"></a>参数类型</p>
     </th>
-    <th class="cellrowborder" valign="top" width="53.408160879223665%" id="mcps1.1.4.1.3"><p id="p33056312152721"><a name="p33056312152721"></a><a name="p33056312152721"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="53.408160879223665%" id="mcps1.2.4.1.3"><p id="p33056312152721"><a name="p33056312152721"></a><a name="p33056312152721"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row60315630152721"><td class="cellrowborder" valign="top" width="18.905647141353914%" headers="mcps1.1.4.1.1 "><p id="p53727868152721"><a name="p53727868152721"></a><a name="p53727868152721"></a>metrics</p>
+    <tbody><tr id="row60315630152721"><td class="cellrowborder" valign="top" width="18.905647141353914%" headers="mcps1.2.4.1.1 "><p id="p53727868152721"><a name="p53727868152721"></a><a name="p53727868152721"></a>metrics</p>
     </td>
-    <td class="cellrowborder" valign="top" width="27.686191979422425%" headers="mcps1.1.4.1.2 "><p id="p52794691152721"><a name="p52794691152721"></a><a name="p52794691152721"></a>JSON数组</p>
+    <td class="cellrowborder" valign="top" width="27.686191979422425%" headers="mcps1.2.4.1.2 "><p id="p52794691152721"><a name="p52794691152721"></a><a name="p52794691152721"></a>JSON数组</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.408160879223665%" headers="mcps1.1.4.1.3 "><p id="p48511563152721"><a name="p48511563152721"></a><a name="p48511563152721"></a>指标对象列表。</p>
-    </td>
-    </tr>
-    <tr id="row33950884152721"><td class="cellrowborder" valign="top" width="18.905647141353914%" headers="mcps1.1.4.1.1 "><p id="p65667112152721"><a name="p65667112152721"></a><a name="p65667112152721"></a>namespace</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="27.686191979422425%" headers="mcps1.1.4.1.2 "><p id="p3018245152721"><a name="p3018245152721"></a><a name="p3018245152721"></a>字符串</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="53.408160879223665%" headers="mcps1.1.4.1.3 "><p id="p1984935915480"><a name="p1984935915480"></a><a name="p1984935915480"></a>指标命名空间，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
+    <td class="cellrowborder" valign="top" width="53.408160879223665%" headers="mcps1.2.4.1.3 "><p id="p48511563152721"><a name="p48511563152721"></a><a name="p48511563152721"></a>指标对象列表。</p>
     </td>
     </tr>
-    <tr id="row52817186152721"><td class="cellrowborder" valign="top" width="18.905647141353914%" headers="mcps1.1.4.1.1 "><p id="p50333653152721"><a name="p50333653152721"></a><a name="p50333653152721"></a>metric_name</p>
+    <tr id="row33950884152721"><td class="cellrowborder" valign="top" width="18.905647141353914%" headers="mcps1.2.4.1.1 "><p id="p65667112152721"><a name="p65667112152721"></a><a name="p65667112152721"></a>namespace</p>
     </td>
-    <td class="cellrowborder" valign="top" width="27.686191979422425%" headers="mcps1.1.4.1.2 "><p id="p63487388152721"><a name="p63487388152721"></a><a name="p63487388152721"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="27.686191979422425%" headers="mcps1.2.4.1.2 "><p id="p3018245152721"><a name="p3018245152721"></a><a name="p3018245152721"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.408160879223665%" headers="mcps1.1.4.1.3 "><p id="p35943562"><a name="p35943562"></a><a name="p35943562"></a>指标名称，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section52364133112133">监控指标</a>中的cpu_util。</p>
+    <td class="cellrowborder" valign="top" width="53.408160879223665%" headers="mcps1.2.4.1.3 "><p id="p1984935915480"><a name="p1984935915480"></a><a name="p1984935915480"></a>指标命名空间，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
     </td>
     </tr>
-    <tr id="row27056190152721"><td class="cellrowborder" valign="top" width="18.905647141353914%" headers="mcps1.1.4.1.1 "><p id="p50394696174256"><a name="p50394696174256"></a><a name="p50394696174256"></a>dimensions</p>
+    <tr id="row52817186152721"><td class="cellrowborder" valign="top" width="18.905647141353914%" headers="mcps1.2.4.1.1 "><p id="p50333653152721"><a name="p50333653152721"></a><a name="p50333653152721"></a>metric_name</p>
     </td>
-    <td class="cellrowborder" valign="top" width="27.686191979422425%" headers="mcps1.1.4.1.2 "><p id="p61337840174256"><a name="p61337840174256"></a><a name="p61337840174256"></a>JSON数组</p>
+    <td class="cellrowborder" valign="top" width="27.686191979422425%" headers="mcps1.2.4.1.2 "><p id="p63487388152721"><a name="p63487388152721"></a><a name="p63487388152721"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.408160879223665%" headers="mcps1.1.4.1.3 "><p id="p2309106174256"><a name="p2309106174256"></a><a name="p2309106174256"></a>指标维度列表。</p>
+    <td class="cellrowborder" valign="top" width="53.408160879223665%" headers="mcps1.2.4.1.3 "><p id="p35943562"><a name="p35943562"></a><a name="p35943562"></a>指标名称，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section52364133112133">监控指标</a>中的cpu_util。</p>
+    </td>
+    </tr>
+    <tr id="row27056190152721"><td class="cellrowborder" valign="top" width="18.905647141353914%" headers="mcps1.2.4.1.1 "><p id="p50394696174256"><a name="p50394696174256"></a><a name="p50394696174256"></a>dimensions</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="27.686191979422425%" headers="mcps1.2.4.1.2 "><p id="p61337840174256"><a name="p61337840174256"></a><a name="p61337840174256"></a>JSON数组</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="53.408160879223665%" headers="mcps1.2.4.1.3 "><p id="p2309106174256"><a name="p2309106174256"></a><a name="p2309106174256"></a>指标维度列表。</p>
     <p id="p20781960174256"><a name="p20781960174256"></a><a name="p20781960174256"></a>dimension.name：对象类型，如弹性云服务器实例（instance_id）。</p>
     <p id="p52819913174256"><a name="p52819913174256"></a><a name="p52819913174256"></a>dimension.value：对象标识，如弹性云服务器ID。</p>
     </td>
@@ -161,4 +160,8 @@
     </tbody>
     </table>
 
+
+## 错误码<a name="section13437112124616"></a>
+
+请参考[返回错误码说明](返回错误码说明.md)。
 
