--- a/cn.zh-cn/API参考/查询指标列表.md
+++ b/cn.zh-cn/API参考/查询指标列表.md
@@ -6,95 +6,95 @@
 
 ## URI<a name="section62331491"></a>
 
--   URI格式
-
-    GET /V1.0/\{project\_id\}/metrics
+GET /V1.0/\{project\_id\}/metrics
 
 -   参数说明
 
+    **表 1**  参数说明
+
     <a name="table35298993175334"></a>
-    <table><thead align="left"><tr id="row56207076175334"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.1.3.1.1"><p id="p56479321175334"><a name="p56479321175334"></a><a name="p56479321175334"></a>名称</p>
+    <table><thead align="left"><tr id="row56207076175334"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.2.3.1.1"><p id="p56479321175334"><a name="p56479321175334"></a><a name="p56479321175334"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.1.3.1.2"><p id="p52789000175334"><a name="p52789000175334"></a><a name="p52789000175334"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.2.3.1.2"><p id="p52789000175334"><a name="p52789000175334"></a><a name="p52789000175334"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row48050578175334"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.1.3.1.1 "><p id="p66891592175334"><a name="p66891592175334"></a><a name="p66891592175334"></a>project_id</p>
+    <tbody><tr id="row48050578175334"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.2.3.1.1 "><p id="p66891592175334"><a name="p66891592175334"></a><a name="p66891592175334"></a>project_id</p>
     </td>
-    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.1.3.1.2 "><p id="p50879579175334"><a name="p50879579175334"></a><a name="p50879579175334"></a>项目编号。</p>
+    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.2.3.1.2 "><p id="p50879579175334"><a name="p50879579175334"></a><a name="p50879579175334"></a>项目编号。</p>
     </td>
     </tr>
     </tbody>
     </table>
 
--   以下列表为查询检索参数
+    **表 2**  查询检索参数说明
 
     <a name="table35416756"></a>
-    <table><thead align="left"><tr id="row27598891"><th class="cellrowborder" valign="top" width="21.292129212921292%" id="mcps1.1.5.1.1"><p id="p20917673"><a name="p20917673"></a><a name="p20917673"></a>名称</p>
+    <table><thead align="left"><tr id="row27598891"><th class="cellrowborder" valign="top" width="21.292129212921292%" id="mcps1.2.5.1.1"><p id="p20917673"><a name="p20917673"></a><a name="p20917673"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="15.551555155515551%" id="mcps1.1.5.1.2"><p id="p16609919"><a name="p16609919"></a><a name="p16609919"></a>是否必选</p>
+    <th class="cellrowborder" valign="top" width="15.551555155515551%" id="mcps1.2.5.1.2"><p id="p16609919"><a name="p16609919"></a><a name="p16609919"></a>是否必选</p>
     </th>
-    <th class="cellrowborder" valign="top" width="18.23182318231823%" id="mcps1.1.5.1.3"><p id="p3884242163044"><a name="p3884242163044"></a><a name="p3884242163044"></a>参数类型</p>
+    <th class="cellrowborder" valign="top" width="18.23182318231823%" id="mcps1.2.5.1.3"><p id="p3884242163044"><a name="p3884242163044"></a><a name="p3884242163044"></a>参数类型</p>
     </th>
-    <th class="cellrowborder" valign="top" width="44.92449244924492%" id="mcps1.1.5.1.4"><p id="p3226198"><a name="p3226198"></a><a name="p3226198"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="44.92449244924492%" id="mcps1.2.5.1.4"><p id="p3226198"><a name="p3226198"></a><a name="p3226198"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row59995477"><td class="cellrowborder" valign="top" width="21.292129212921292%" headers="mcps1.1.5.1.1 "><p id="p27795493"><a name="p27795493"></a><a name="p27795493"></a>namespace</p>
+    <tbody><tr id="row59995477"><td class="cellrowborder" valign="top" width="21.292129212921292%" headers="mcps1.2.5.1.1 "><p id="p27795493"><a name="p27795493"></a><a name="p27795493"></a>namespace</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.551555155515551%" headers="mcps1.1.5.1.2 "><p id="p36842478"><a name="p36842478"></a><a name="p36842478"></a>否</p>
+    <td class="cellrowborder" valign="top" width="15.551555155515551%" headers="mcps1.2.5.1.2 "><p id="p36842478"><a name="p36842478"></a><a name="p36842478"></a>否</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.23182318231823%" headers="mcps1.1.5.1.3 "><p id="p46188171163044"><a name="p46188171163044"></a><a name="p46188171163044"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="18.23182318231823%" headers="mcps1.2.5.1.3 "><p id="p46188171163044"><a name="p46188171163044"></a><a name="p46188171163044"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.1.5.1.4 "><p id="p1529914911223"><a name="p1529914911223"></a><a name="p1529914911223"></a>指标命名空间，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
-    </td>
-    </tr>
-    <tr id="row14620943"><td class="cellrowborder" valign="top" width="21.292129212921292%" headers="mcps1.1.5.1.1 "><p id="p43445707"><a name="p43445707"></a><a name="p43445707"></a>metric_name</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="15.551555155515551%" headers="mcps1.1.5.1.2 "><p id="p29441404"><a name="p29441404"></a><a name="p29441404"></a>否</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="18.23182318231823%" headers="mcps1.1.5.1.3 "><p id="p50254369163044"><a name="p50254369163044"></a><a name="p50254369163044"></a>字符串</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.1.5.1.4 "><p id="p35943562"><a name="p35943562"></a><a name="p35943562"></a>指标名称，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section52364133112133">监控指标</a>中的cpu_util。</p>
+    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.2.5.1.4 "><p id="p1529914911223"><a name="p1529914911223"></a><a name="p1529914911223"></a>指标命名空间，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
     </td>
     </tr>
-    <tr id="row55056607"><td class="cellrowborder" valign="top" width="21.292129212921292%" headers="mcps1.1.5.1.1 "><p id="p30400195"><a name="p30400195"></a><a name="p30400195"></a>dim</p>
+    <tr id="row14620943"><td class="cellrowborder" valign="top" width="21.292129212921292%" headers="mcps1.2.5.1.1 "><p id="p43445707"><a name="p43445707"></a><a name="p43445707"></a>metric_name</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.551555155515551%" headers="mcps1.1.5.1.2 "><p id="p46496694"><a name="p46496694"></a><a name="p46496694"></a>否</p>
+    <td class="cellrowborder" valign="top" width="15.551555155515551%" headers="mcps1.2.5.1.2 "><p id="p29441404"><a name="p29441404"></a><a name="p29441404"></a>否</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.23182318231823%" headers="mcps1.1.5.1.3 "><p id="p44072059163044"><a name="p44072059163044"></a><a name="p44072059163044"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="18.23182318231823%" headers="mcps1.2.5.1.3 "><p id="p50254369163044"><a name="p50254369163044"></a><a name="p50254369163044"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.1.5.1.4 "><p id="p19158445162638"><a name="p19158445162638"></a><a name="p19158445162638"></a>指标的维度，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section36963297112133">维度</a>中的instance_id。目前最大支持3个维度，从0开始；维度格式为dim.{i}=key,value，key的最大长度32，value的最大长度为256。</p>
+    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.2.5.1.4 "><p id="p35943562"><a name="p35943562"></a><a name="p35943562"></a>指标名称，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section52364133112133">监控指标</a>中的cpu_util。</p>
+    </td>
+    </tr>
+    <tr id="row55056607"><td class="cellrowborder" valign="top" width="21.292129212921292%" headers="mcps1.2.5.1.1 "><p id="p30400195"><a name="p30400195"></a><a name="p30400195"></a>dim</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="15.551555155515551%" headers="mcps1.2.5.1.2 "><p id="p46496694"><a name="p46496694"></a><a name="p46496694"></a>否</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="18.23182318231823%" headers="mcps1.2.5.1.3 "><p id="p44072059163044"><a name="p44072059163044"></a><a name="p44072059163044"></a>字符串</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.2.5.1.4 "><p id="p19158445162638"><a name="p19158445162638"></a><a name="p19158445162638"></a>指标的维度，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section36963297112133">维度</a>中的instance_id。目前最大支持3个维度，从0开始；维度格式为dim.{i}=key,value，key的最大长度32，value的最大长度为256。</p>
     <p id="p8135907"><a name="p8135907"></a><a name="p8135907"></a>例如：dim.0=instance_id,6f3c6f91-4b24-4e1b-b7d1-a94ac1cb011d</p>
     </td>
     </tr>
-    <tr id="row6114302"><td class="cellrowborder" valign="top" width="21.292129212921292%" headers="mcps1.1.5.1.1 "><p id="p25496434"><a name="p25496434"></a><a name="p25496434"></a>start</p>
+    <tr id="row6114302"><td class="cellrowborder" valign="top" width="21.292129212921292%" headers="mcps1.2.5.1.1 "><p id="p25496434"><a name="p25496434"></a><a name="p25496434"></a>start</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.551555155515551%" headers="mcps1.1.5.1.2 "><p id="p51945267"><a name="p51945267"></a><a name="p51945267"></a>否</p>
+    <td class="cellrowborder" valign="top" width="15.551555155515551%" headers="mcps1.2.5.1.2 "><p id="p51945267"><a name="p51945267"></a><a name="p51945267"></a>否</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.23182318231823%" headers="mcps1.1.5.1.3 "><p id="p13067009163044"><a name="p13067009163044"></a><a name="p13067009163044"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="18.23182318231823%" headers="mcps1.2.5.1.3 "><p id="p13067009163044"><a name="p13067009163044"></a><a name="p13067009163044"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.1.5.1.4 "><p id="p46817064"><a name="p46817064"></a><a name="p46817064"></a>分页起始值，格式为：namespace.metric_name.key:value</p>
+    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.2.5.1.4 "><p id="p46817064"><a name="p46817064"></a><a name="p46817064"></a>分页起始值，格式为：namespace.metric_name.key:value</p>
     <p id="p62847380164456"><a name="p62847380164456"></a><a name="p62847380164456"></a>例如：start=SYS.ECS.cpu_util.instance_id:d9112af5-6913-4f3b-bd0a-3f96711e004d</p>
     </td>
     </tr>
-    <tr id="row18700393"><td class="cellrowborder" valign="top" width="21.292129212921292%" headers="mcps1.1.5.1.1 "><p id="p38336904"><a name="p38336904"></a><a name="p38336904"></a>limit</p>
+    <tr id="row18700393"><td class="cellrowborder" valign="top" width="21.292129212921292%" headers="mcps1.2.5.1.1 "><p id="p38336904"><a name="p38336904"></a><a name="p38336904"></a>limit</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.551555155515551%" headers="mcps1.1.5.1.2 "><p id="p18281552"><a name="p18281552"></a><a name="p18281552"></a>否</p>
+    <td class="cellrowborder" valign="top" width="15.551555155515551%" headers="mcps1.2.5.1.2 "><p id="p18281552"><a name="p18281552"></a><a name="p18281552"></a>否</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.23182318231823%" headers="mcps1.1.5.1.3 "><p id="p51794845163044"><a name="p51794845163044"></a><a name="p51794845163044"></a>整数</p>
+    <td class="cellrowborder" valign="top" width="18.23182318231823%" headers="mcps1.2.5.1.3 "><p id="p51794845163044"><a name="p51794845163044"></a><a name="p51794845163044"></a>整数</p>
     </td>
-    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.1.5.1.4 "><p id="p4410728"><a name="p4410728"></a><a name="p4410728"></a>取值范围(0,1000]，默认值为1000。</p>
+    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.2.5.1.4 "><p id="p4410728"><a name="p4410728"></a><a name="p4410728"></a>取值范围(0,1000]，默认值为1000。</p>
     <p id="p39696553"><a name="p39696553"></a><a name="p39696553"></a>用于限制结果数据条数。</p>
     </td>
     </tr>
-    <tr id="row21724664"><td class="cellrowborder" valign="top" width="21.292129212921292%" headers="mcps1.1.5.1.1 "><p id="p14867369"><a name="p14867369"></a><a name="p14867369"></a>order</p>
+    <tr id="row21724664"><td class="cellrowborder" valign="top" width="21.292129212921292%" headers="mcps1.2.5.1.1 "><p id="p14867369"><a name="p14867369"></a><a name="p14867369"></a>order</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.551555155515551%" headers="mcps1.1.5.1.2 "><p id="p63406242"><a name="p63406242"></a><a name="p63406242"></a>否</p>
+    <td class="cellrowborder" valign="top" width="15.551555155515551%" headers="mcps1.2.5.1.2 "><p id="p63406242"><a name="p63406242"></a><a name="p63406242"></a>否</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.23182318231823%" headers="mcps1.1.5.1.3 "><p id="p34632884163044"><a name="p34632884163044"></a><a name="p34632884163044"></a>枚举</p>
+    <td class="cellrowborder" valign="top" width="18.23182318231823%" headers="mcps1.2.5.1.3 "><p id="p34632884163044"><a name="p34632884163044"></a><a name="p34632884163044"></a>枚举</p>
     </td>
-    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.1.5.1.4 "><p id="p35632012"><a name="p35632012"></a><a name="p35632012"></a>用于标识结果排序方法，按时间戳排序。</p>
+    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.2.5.1.4 "><p id="p35632012"><a name="p35632012"></a><a name="p35632012"></a>用于标识结果排序方法，按时间戳排序。</p>
     <p id="p52252659"><a name="p52252659"></a><a name="p52252659"></a>取值说明，默认为desc：</p>
     <a name="ul4241055916271"></a><a name="ul4241055916271"></a><ul id="ul4241055916271"><li>asc，升序</li><li>desc，降序</li></ul>
     </td>
@@ -110,88 +110,87 @@
     /V1.0/{project_id}/metrics?namespace=SYS.ECS&metric_name=cpu_util&dim.0=instance_id,6f3c6f91-4b24-4e1b-b7d1-a94ac1cb011d&limit=10&order=desc
     ```
 
-    >![](public_sys-resources/icon-note.gif) **说明：**   
-    >错误码说明请参见[返回错误码说明](返回错误码说明.md)。  
 
-
-## 请求<a name="section24112512"></a>
+## 请求消息<a name="section24112512"></a>
 
 无
 
-## 响应<a name="section15686020"></a>
+## 响应消息<a name="section15686020"></a>
 
--   要素说明
+-   响应参数
+
+    **表 3**  响应参数
 
     <a name="table26246518152631"></a>
-    <table><thead align="left"><tr id="row29602547152631"><th class="cellrowborder" valign="top" width="27.889185116494726%" id="mcps1.1.4.1.1"><p id="p48996072152631"><a name="p48996072152631"></a><a name="p48996072152631"></a>名称</p>
+    <table><thead align="left"><tr id="row29602547152631"><th class="cellrowborder" valign="top" width="27.889185116494726%" id="mcps1.2.4.1.1"><p id="p48996072152631"><a name="p48996072152631"></a><a name="p48996072152631"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="18.95212704300452%" id="mcps1.1.4.1.2"><p id="p11771280152631"><a name="p11771280152631"></a><a name="p11771280152631"></a>参数类型</p>
+    <th class="cellrowborder" valign="top" width="18.95212704300452%" id="mcps1.2.4.1.2"><p id="p11771280152631"><a name="p11771280152631"></a><a name="p11771280152631"></a>参数类型</p>
     </th>
-    <th class="cellrowborder" valign="top" width="53.158687840500754%" id="mcps1.1.4.1.3"><p id="p13949586152631"><a name="p13949586152631"></a><a name="p13949586152631"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="53.158687840500754%" id="mcps1.2.4.1.3"><p id="p13949586152631"><a name="p13949586152631"></a><a name="p13949586152631"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row56174697152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.1.4.1.1 "><p id="p53856637152631"><a name="p53856637152631"></a><a name="p53856637152631"></a>meta_data</p>
+    <tbody><tr id="row56174697152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.2.4.1.1 "><p id="p53856637152631"><a name="p53856637152631"></a><a name="p53856637152631"></a>meta_data</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.1.4.1.2 "><p id="p25229690152631"><a name="p25229690152631"></a><a name="p25229690152631"></a>JSON对象</p>
+    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.2.4.1.2 "><p id="p25229690152631"><a name="p25229690152631"></a><a name="p25229690152631"></a>JSON对象</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.1.4.1.3 "><p id="p30338995152631"><a name="p30338995152631"></a><a name="p30338995152631"></a>查询结果元数据信息，包括分页信息等。</p>
-    </td>
-    </tr>
-    <tr id="row4615503152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.1.4.1.1 "><p id="p38311442152631"><a name="p38311442152631"></a><a name="p38311442152631"></a>meta_data.count</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.1.4.1.2 "><p id="p38676217152631"><a name="p38676217152631"></a><a name="p38676217152631"></a>整数</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.1.4.1.3 "><p id="p45765869152631"><a name="p45765869152631"></a><a name="p45765869152631"></a>当前返回结果条数。</p>
+    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.2.4.1.3 "><p id="p30338995152631"><a name="p30338995152631"></a><a name="p30338995152631"></a>查询结果元数据信息，包括分页信息等。</p>
     </td>
     </tr>
-    <tr id="row9239644152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.1.4.1.1 "><p id="p10213720152631"><a name="p10213720152631"></a><a name="p10213720152631"></a>meta_data.total</p>
+    <tr id="row4615503152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.2.4.1.1 "><p id="p38311442152631"><a name="p38311442152631"></a><a name="p38311442152631"></a>meta_data.count</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.1.4.1.2 "><p id="p37576606152631"><a name="p37576606152631"></a><a name="p37576606152631"></a>整数</p>
+    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.2.4.1.2 "><p id="p38676217152631"><a name="p38676217152631"></a><a name="p38676217152631"></a>整数</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.1.4.1.3 "><p id="p23806264152631"><a name="p23806264152631"></a><a name="p23806264152631"></a>总条数。</p>
-    </td>
-    </tr>
-    <tr id="row12929787152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.1.4.1.1 "><p id="p40679818152631"><a name="p40679818152631"></a><a name="p40679818152631"></a>meta_data.marker</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.1.4.1.2 "><p id="p8339011152631"><a name="p8339011152631"></a><a name="p8339011152631"></a>字符串</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.1.4.1.3 "><p id="p4371260152631"><a name="p4371260152631"></a><a name="p4371260152631"></a>下一个开始的标记，用于分页。</p>
+    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.2.4.1.3 "><p id="p45765869152631"><a name="p45765869152631"></a><a name="p45765869152631"></a>当前返回结果条数。</p>
     </td>
     </tr>
-    <tr id="row39341340152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.1.4.1.1 "><p id="p32531944152631"><a name="p32531944152631"></a><a name="p32531944152631"></a>metrics</p>
+    <tr id="row9239644152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.2.4.1.1 "><p id="p10213720152631"><a name="p10213720152631"></a><a name="p10213720152631"></a>meta_data.total</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.1.4.1.2 "><p id="p35902407152631"><a name="p35902407152631"></a><a name="p35902407152631"></a>JSON数组</p>
+    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.2.4.1.2 "><p id="p37576606152631"><a name="p37576606152631"></a><a name="p37576606152631"></a>整数</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.1.4.1.3 "><p id="p22413865152631"><a name="p22413865152631"></a><a name="p22413865152631"></a>指标对象列表。</p>
-    </td>
-    </tr>
-    <tr id="row398200152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.1.4.1.1 "><p id="p32254203152631"><a name="p32254203152631"></a><a name="p32254203152631"></a>namespace</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.1.4.1.2 "><p id="p25583957152631"><a name="p25583957152631"></a><a name="p25583957152631"></a>字符串</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.1.4.1.3 "><p id="p59034618152631"><a name="p59034618152631"></a><a name="p59034618152631"></a>指标所属命名空间。</p>
+    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.2.4.1.3 "><p id="p23806264152631"><a name="p23806264152631"></a><a name="p23806264152631"></a>总条数。</p>
     </td>
     </tr>
-    <tr id="row61549520152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.1.4.1.1 "><p id="p19455189152631"><a name="p19455189152631"></a><a name="p19455189152631"></a>metric_name</p>
+    <tr id="row12929787152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.2.4.1.1 "><p id="p40679818152631"><a name="p40679818152631"></a><a name="p40679818152631"></a>meta_data.marker</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.1.4.1.2 "><p id="p4437149152631"><a name="p4437149152631"></a><a name="p4437149152631"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.2.4.1.2 "><p id="p8339011152631"><a name="p8339011152631"></a><a name="p8339011152631"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.1.4.1.3 "><p id="p23864751152631"><a name="p23864751152631"></a><a name="p23864751152631"></a>指标名称，如cpu_util。</p>
-    </td>
-    </tr>
-    <tr id="row13456173152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.1.4.1.1 "><p id="p16208205152631"><a name="p16208205152631"></a><a name="p16208205152631"></a>unit</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.1.4.1.2 "><p id="p41596439152631"><a name="p41596439152631"></a><a name="p41596439152631"></a>字符串</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.1.4.1.3 "><p id="p13868433152631"><a name="p13868433152631"></a><a name="p13868433152631"></a>指标单位。</p>
+    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.2.4.1.3 "><p id="p4371260152631"><a name="p4371260152631"></a><a name="p4371260152631"></a>下一个开始的标记，用于分页。</p>
     </td>
     </tr>
-    <tr id="row57707040152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.1.4.1.1 "><p id="p43758662152631"><a name="p43758662152631"></a><a name="p43758662152631"></a>dimensions</p>
+    <tr id="row39341340152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.2.4.1.1 "><p id="p32531944152631"><a name="p32531944152631"></a><a name="p32531944152631"></a>metrics</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.1.4.1.2 "><p id="p8862022152631"><a name="p8862022152631"></a><a name="p8862022152631"></a>JSON数组</p>
+    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.2.4.1.2 "><p id="p35902407152631"><a name="p35902407152631"></a><a name="p35902407152631"></a>JSON数组</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.1.4.1.3 "><p id="p15312191518412"><a name="p15312191518412"></a><a name="p15312191518412"></a>指标维度列表。</p>
+    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.2.4.1.3 "><p id="p22413865152631"><a name="p22413865152631"></a><a name="p22413865152631"></a>指标对象列表。</p>
+    </td>
+    </tr>
+    <tr id="row398200152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.2.4.1.1 "><p id="p32254203152631"><a name="p32254203152631"></a><a name="p32254203152631"></a>namespace</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.2.4.1.2 "><p id="p25583957152631"><a name="p25583957152631"></a><a name="p25583957152631"></a>字符串</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.2.4.1.3 "><p id="p59034618152631"><a name="p59034618152631"></a><a name="p59034618152631"></a>指标所属命名空间。</p>
+    </td>
+    </tr>
+    <tr id="row61549520152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.2.4.1.1 "><p id="p19455189152631"><a name="p19455189152631"></a><a name="p19455189152631"></a>metric_name</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.2.4.1.2 "><p id="p4437149152631"><a name="p4437149152631"></a><a name="p4437149152631"></a>字符串</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.2.4.1.3 "><p id="p23864751152631"><a name="p23864751152631"></a><a name="p23864751152631"></a>指标名称，如cpu_util。</p>
+    </td>
+    </tr>
+    <tr id="row13456173152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.2.4.1.1 "><p id="p16208205152631"><a name="p16208205152631"></a><a name="p16208205152631"></a>unit</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.2.4.1.2 "><p id="p41596439152631"><a name="p41596439152631"></a><a name="p41596439152631"></a>字符串</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.2.4.1.3 "><p id="p13868433152631"><a name="p13868433152631"></a><a name="p13868433152631"></a>指标单位。</p>
+    </td>
+    </tr>
+    <tr id="row57707040152631"><td class="cellrowborder" valign="top" width="27.889185116494726%" headers="mcps1.2.4.1.1 "><p id="p43758662152631"><a name="p43758662152631"></a><a name="p43758662152631"></a>dimensions</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="18.95212704300452%" headers="mcps1.2.4.1.2 "><p id="p8862022152631"><a name="p8862022152631"></a><a name="p8862022152631"></a>JSON数组</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="53.158687840500754%" headers="mcps1.2.4.1.3 "><p id="p15312191518412"><a name="p15312191518412"></a><a name="p15312191518412"></a>指标维度列表。</p>
     <p id="p1944965105023"><a name="p1944965105023"></a><a name="p1944965105023"></a>dimension.name：对象类型，如弹性云服务器实例（instance_id）。</p>
     <p id="p17504693105023"><a name="p17504693105023"></a><a name="p17504693105023"></a>dimension.value：对象标识，如弹性云服务器ID。长度最短为1，最大为256。</p>
     </td>
@@ -278,4 +277,8 @@
     </tbody>
     </table>
 
+
+## 错误码<a name="section4614115614510"></a>
+
+请参考[返回错误码说明](返回错误码说明.md)。
 
