--- a/cn.zh-cn/API参考/查询配额.md
+++ b/cn.zh-cn/API参考/查询配额.md
@@ -6,22 +6,22 @@
 
 ## URI<a name="section62331491"></a>
 
--   URI格式
-
-    GET /V1.0/\{project\_id\}/quotas
+GET /V1.0/\{project\_id\}/quotas
 
 -   参数说明
 
+    **表 1**  参数说明
+
     <a name="table35846240171810"></a>
-    <table><thead align="left"><tr id="row35634314171810"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.1.3.1.1"><p id="p698337171810"><a name="p698337171810"></a><a name="p698337171810"></a>名称</p>
+    <table><thead align="left"><tr id="row35634314171810"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.2.3.1.1"><p id="p698337171810"><a name="p698337171810"></a><a name="p698337171810"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.1.3.1.2"><p id="p18391853171810"><a name="p18391853171810"></a><a name="p18391853171810"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.2.3.1.2"><p id="p18391853171810"><a name="p18391853171810"></a><a name="p18391853171810"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row13345138171810"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.1.3.1.1 "><p id="p7214379171810"><a name="p7214379171810"></a><a name="p7214379171810"></a>project_id</p>
+    <tbody><tr id="row13345138171810"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.2.3.1.1 "><p id="p7214379171810"><a name="p7214379171810"></a><a name="p7214379171810"></a>project_id</p>
     </td>
-    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.1.3.1.2 "><p id="p21794587171810"><a name="p21794587171810"></a><a name="p21794587171810"></a>项目编号。</p>
+    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.2.3.1.2 "><p id="p21794587171810"><a name="p21794587171810"></a><a name="p21794587171810"></a>项目编号。</p>
     </td>
     </tr>
     </tbody>
@@ -33,69 +33,68 @@
     /V1.0/{project_id}/quotas
     ```
 
-    >![](public_sys-resources/icon-note.gif) **说明：**   
-    >错误码说明请参见[返回错误码说明](返回错误码说明.md)。  
 
-
-## 请求<a name="section24112512"></a>
+## 请求消息<a name="section24112512"></a>
 
 无
 
-## 响应<a name="section15686020"></a>
+## 响应消息<a name="section15686020"></a>
 
--   要素说明
+-   响应参数
+
+    **表 2**  响应参数
 
     <a name="table5856932152840"></a>
-    <table><thead align="left"><tr id="row5206426152840"><th class="cellrowborder" valign="top" width="19.367349412192464%" id="mcps1.1.4.1.1"><p id="p19067323152840"><a name="p19067323152840"></a><a name="p19067323152840"></a>名称</p>
+    <table><thead align="left"><tr id="row5206426152840"><th class="cellrowborder" valign="top" width="19.367349412192464%" id="mcps1.2.4.1.1"><p id="p19067323152840"><a name="p19067323152840"></a><a name="p19067323152840"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="25.05150890801115%" id="mcps1.1.4.1.2"><p id="p9786487152840"><a name="p9786487152840"></a><a name="p9786487152840"></a>参数类型</p>
+    <th class="cellrowborder" valign="top" width="25.05150890801115%" id="mcps1.2.4.1.2"><p id="p9786487152840"><a name="p9786487152840"></a><a name="p9786487152840"></a>参数类型</p>
     </th>
-    <th class="cellrowborder" valign="top" width="55.581141679796396%" id="mcps1.1.4.1.3"><p id="p54508002152840"><a name="p54508002152840"></a><a name="p54508002152840"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="55.581141679796396%" id="mcps1.2.4.1.3"><p id="p54508002152840"><a name="p54508002152840"></a><a name="p54508002152840"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row25652894105355"><td class="cellrowborder" valign="top" width="19.367349412192464%" headers="mcps1.1.4.1.1 "><p id="p64618506105355"><a name="p64618506105355"></a><a name="p64618506105355"></a>quotas</p>
+    <tbody><tr id="row25652894105355"><td class="cellrowborder" valign="top" width="19.367349412192464%" headers="mcps1.2.4.1.1 "><p id="p64618506105355"><a name="p64618506105355"></a><a name="p64618506105355"></a>quotas</p>
     </td>
-    <td class="cellrowborder" valign="top" width="25.05150890801115%" headers="mcps1.1.4.1.2 "><p id="p35329321105355"><a name="p35329321105355"></a><a name="p35329321105355"></a>JSON对象</p>
+    <td class="cellrowborder" valign="top" width="25.05150890801115%" headers="mcps1.2.4.1.2 "><p id="p35329321105355"><a name="p35329321105355"></a><a name="p35329321105355"></a>JSON对象</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.581141679796396%" headers="mcps1.1.4.1.3 "><p id="p43102763105355"><a name="p43102763105355"></a><a name="p43102763105355"></a>配额列表</p>
-    </td>
-    </tr>
-    <tr id="row41015029105352"><td class="cellrowborder" valign="top" width="19.367349412192464%" headers="mcps1.1.4.1.1 "><p id="p33883078105352"><a name="p33883078105352"></a><a name="p33883078105352"></a>resources</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="25.05150890801115%" headers="mcps1.1.4.1.2 "><p id="p42323558105352"><a name="p42323558105352"></a><a name="p42323558105352"></a>JSON数组</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="55.581141679796396%" headers="mcps1.1.4.1.3 "><p id="p5656197105352"><a name="p5656197105352"></a><a name="p5656197105352"></a>资源配额列表</p>
+    <td class="cellrowborder" valign="top" width="55.581141679796396%" headers="mcps1.2.4.1.3 "><p id="p43102763105355"><a name="p43102763105355"></a><a name="p43102763105355"></a>配额列表</p>
     </td>
     </tr>
-    <tr id="row53072054152840"><td class="cellrowborder" valign="top" width="19.367349412192464%" headers="mcps1.1.4.1.1 "><p id="p3869081152840"><a name="p3869081152840"></a><a name="p3869081152840"></a>type</p>
+    <tr id="row41015029105352"><td class="cellrowborder" valign="top" width="19.367349412192464%" headers="mcps1.2.4.1.1 "><p id="p33883078105352"><a name="p33883078105352"></a><a name="p33883078105352"></a>resources</p>
     </td>
-    <td class="cellrowborder" valign="top" width="25.05150890801115%" headers="mcps1.1.4.1.2 "><p id="p17896115152840"><a name="p17896115152840"></a><a name="p17896115152840"></a>枚举</p>
+    <td class="cellrowborder" valign="top" width="25.05150890801115%" headers="mcps1.2.4.1.2 "><p id="p42323558105352"><a name="p42323558105352"></a><a name="p42323558105352"></a>JSON数组</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.581141679796396%" headers="mcps1.1.4.1.3 "><p id="p40299192152840"><a name="p40299192152840"></a><a name="p40299192152840"></a>配额类型。</p>
+    <td class="cellrowborder" valign="top" width="55.581141679796396%" headers="mcps1.2.4.1.3 "><p id="p5656197105352"><a name="p5656197105352"></a><a name="p5656197105352"></a>资源配额列表</p>
+    </td>
+    </tr>
+    <tr id="row53072054152840"><td class="cellrowborder" valign="top" width="19.367349412192464%" headers="mcps1.2.4.1.1 "><p id="p3869081152840"><a name="p3869081152840"></a><a name="p3869081152840"></a>type</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="25.05150890801115%" headers="mcps1.2.4.1.2 "><p id="p17896115152840"><a name="p17896115152840"></a><a name="p17896115152840"></a>枚举</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="55.581141679796396%" headers="mcps1.2.4.1.3 "><p id="p40299192152840"><a name="p40299192152840"></a><a name="p40299192152840"></a>配额类型。</p>
     <p id="p27148414152840"><a name="p27148414152840"></a><a name="p27148414152840"></a>枚举值说明：</p>
     <p id="p43009134152840"><a name="p43009134152840"></a><a name="p43009134152840"></a>alarm，告警规则</p>
     </td>
     </tr>
-    <tr id="row51537891152840"><td class="cellrowborder" valign="top" width="19.367349412192464%" headers="mcps1.1.4.1.1 "><p id="p13819620152840"><a name="p13819620152840"></a><a name="p13819620152840"></a>used</p>
+    <tr id="row51537891152840"><td class="cellrowborder" valign="top" width="19.367349412192464%" headers="mcps1.2.4.1.1 "><p id="p13819620152840"><a name="p13819620152840"></a><a name="p13819620152840"></a>used</p>
     </td>
-    <td class="cellrowborder" valign="top" width="25.05150890801115%" headers="mcps1.1.4.1.2 "><p id="p6457309152840"><a name="p6457309152840"></a><a name="p6457309152840"></a>整数</p>
+    <td class="cellrowborder" valign="top" width="25.05150890801115%" headers="mcps1.2.4.1.2 "><p id="p6457309152840"><a name="p6457309152840"></a><a name="p6457309152840"></a>整数</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.581141679796396%" headers="mcps1.1.4.1.3 "><p id="p53280036152840"><a name="p53280036152840"></a><a name="p53280036152840"></a>已使用配额数。</p>
-    </td>
-    </tr>
-    <tr id="row9758283152840"><td class="cellrowborder" valign="top" width="19.367349412192464%" headers="mcps1.1.4.1.1 "><p id="p52223468152840"><a name="p52223468152840"></a><a name="p52223468152840"></a>unit</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="25.05150890801115%" headers="mcps1.1.4.1.2 "><p id="p47426223152840"><a name="p47426223152840"></a><a name="p47426223152840"></a>字符串</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="55.581141679796396%" headers="mcps1.1.4.1.3 "><p id="p16318882152840"><a name="p16318882152840"></a><a name="p16318882152840"></a>单位。</p>
+    <td class="cellrowborder" valign="top" width="55.581141679796396%" headers="mcps1.2.4.1.3 "><p id="p53280036152840"><a name="p53280036152840"></a><a name="p53280036152840"></a>已使用配额数。</p>
     </td>
     </tr>
-    <tr id="row12652212152840"><td class="cellrowborder" valign="top" width="19.367349412192464%" headers="mcps1.1.4.1.1 "><p id="p18196222152840"><a name="p18196222152840"></a><a name="p18196222152840"></a>quota</p>
+    <tr id="row9758283152840"><td class="cellrowborder" valign="top" width="19.367349412192464%" headers="mcps1.2.4.1.1 "><p id="p52223468152840"><a name="p52223468152840"></a><a name="p52223468152840"></a>unit</p>
     </td>
-    <td class="cellrowborder" valign="top" width="25.05150890801115%" headers="mcps1.1.4.1.2 "><p id="p65854208152840"><a name="p65854208152840"></a><a name="p65854208152840"></a>整数</p>
+    <td class="cellrowborder" valign="top" width="25.05150890801115%" headers="mcps1.2.4.1.2 "><p id="p47426223152840"><a name="p47426223152840"></a><a name="p47426223152840"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.581141679796396%" headers="mcps1.1.4.1.3 "><p id="p32590599152840"><a name="p32590599152840"></a><a name="p32590599152840"></a>配额总数。</p>
+    <td class="cellrowborder" valign="top" width="55.581141679796396%" headers="mcps1.2.4.1.3 "><p id="p16318882152840"><a name="p16318882152840"></a><a name="p16318882152840"></a>单位。</p>
+    </td>
+    </tr>
+    <tr id="row12652212152840"><td class="cellrowborder" valign="top" width="19.367349412192464%" headers="mcps1.2.4.1.1 "><p id="p18196222152840"><a name="p18196222152840"></a><a name="p18196222152840"></a>quota</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="25.05150890801115%" headers="mcps1.2.4.1.2 "><p id="p65854208152840"><a name="p65854208152840"></a><a name="p65854208152840"></a>整数</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="55.581141679796396%" headers="mcps1.2.4.1.3 "><p id="p32590599152840"><a name="p32590599152840"></a><a name="p32590599152840"></a>配额总数。</p>
     </td>
     </tr>
     </tbody>
@@ -173,4 +172,8 @@
     </tbody>
     </table>
 
+
+## 错误码<a name="section915823415474"></a>
+
+请参考[返回错误码说明](返回错误码说明.md)。
 
