--- a/cn.zh-cn/用户指南/查看监控图表.md
+++ b/cn.zh-cn/用户指南/查看监控图表.md
@@ -29,7 +29,7 @@
     **图 2**  基础监控<a name="fig547204212396"></a>  
     ![](figures/基础监控.png "基础监控")
 
-6.  在监控指标视图右上角，单击![](figures/zh-cn_image_0084572281.png)可查看监控指标视图详情。
+6.  在监控指标视图右上角，单击![](figures/ywx458382-云计算开发部-公有云_IaaS-image-daf70e00-572c-4f31-82a3-a24bcddc0a1a-2.png)可查看监控指标视图详情。
 
     页面左上方提供查看“近1小时”、“近3小时”、“近12小时”、“近24小时”、“近1周”和“近1月”6个固定时长的监控周期，同时也支持以通过“自定义时间段”选择查看近六个月内任意时间段的历史监控数据。
 
