--- a/cn.zh-cn/用户指南/使用告警功能.md
+++ b/cn.zh-cn/用户指南/使用告警功能.md
@@ -4,7 +4,7 @@
 
 -   **[创建告警通知主题](创建告警通知主题.md)**  
 
--   **[创建告警规则](创建告警规则.md)**  
+-   **[创建告警规则](创建告警规则-0.md)**  
 
 -   **[应用示例：用户自定义创建弹性云服务器CPU利用率告警](应用示例-用户自定义创建弹性云服务器CPU利用率告警.md)**  
 
