--- a/cn.zh-cn/API参考/虚拟私有云监控指标说明.md
+++ b/cn.zh-cn/API参考/虚拟私有云监控指标说明.md
@@ -54,7 +54,7 @@ SYS.VPC
 <td class="cellrowborder" valign="top" width="16.000000000000004%" headers="mcps1.2.6.1.2 "><p id="p20307934134916"><a name="p20307934134916"></a><a name="p20307934134916"></a>出网带宽</p>
 </td>
 <td class="cellrowborder" valign="top" width="29.000000000000004%" headers="mcps1.2.6.1.3 "><p id="p3310163417492"><a name="p3310163417492"></a><a name="p3310163417492"></a>该指标用于统计测试对象出云平台的网络速度（原指标为上行带宽）。</p>
-<p id="p20553011105114"><a name="p20553011105114"></a><a name="p20553011105114"></a>该指标用于亚太-香港。</p>
+<p id="p20553011105114"><a name="p20553011105114"></a><a name="p20553011105114"></a>该指标用于亚太-香港、亚太-曼谷。</p>
 </td>
 <td class="cellrowborder" valign="top" width="14.000000000000004%" headers="mcps1.2.6.1.4 "><p id="p831119344492"><a name="p831119344492"></a><a name="p831119344492"></a>≥ 0 bytes/s</p>
 </td>
@@ -66,7 +66,7 @@ SYS.VPC
 <td class="cellrowborder" valign="top" width="16.000000000000004%" headers="mcps1.2.6.1.2 "><p id="p832093410495"><a name="p832093410495"></a><a name="p832093410495"></a>入网带宽</p>
 </td>
 <td class="cellrowborder" valign="top" width="29.000000000000004%" headers="mcps1.2.6.1.3 "><p id="p33221434174915"><a name="p33221434174915"></a><a name="p33221434174915"></a>该指标用于统计测试对象入云平台的网络速度（原指标为下行带宽）。</p>
-<p id="p12804523145113"><a name="p12804523145113"></a><a name="p12804523145113"></a>该指标用于亚太-香港。</p>
+<p id="p12804523145113"><a name="p12804523145113"></a><a name="p12804523145113"></a>该指标用于亚太-香港、亚太-曼谷。</p>
 </td>
 <td class="cellrowborder" valign="top" width="14.000000000000004%" headers="mcps1.2.6.1.4 "><p id="p13323183464914"><a name="p13323183464914"></a><a name="p13323183464914"></a>≥ 0 bytes/s</p>
 </td>
