--- a/cn.zh-cn/用户指南/主机监控.md
+++ b/cn.zh-cn/用户指南/主机监控.md
@@ -20,7 +20,7 @@
 
 -   **[查看监控图表](查看监控图表.md)**  
 
--   **[创建告警规则（主机监控）](创建告警规则（主机监控）.md)**  
+-   **[创建告警规则](创建告警规则.md)**  
 
 -   **[进程监控](进程监控.md)**  
 
