--- a/cn.zh-cn/用户指南/事件监控.md
+++ b/cn.zh-cn/用户指南/事件监控.md
@@ -2,8 +2,8 @@
 
 -   **[事件监控简介](事件监控简介.md)**  
 
--   **[查看监控图表（事件监控）](查看监控图表（事件监控）.md)**  
+-   **[查看监控图表](查看监控图表-2.md)**  
 
--   **[创建告警规则（事件监控）](创建告警规则（事件监控）.md)**  
+-   **[创建告警规则](创建告警规则-2.md)**  
 
 
