--- a/cn.zh-cn/用户指南/创建告警规则.md
+++ b/cn.zh-cn/用户指南/创建告警规则.md
@@ -7,7 +7,7 @@
 ## 操作步骤<a name="section1754824010510"></a>
 
 1.  登录管理控制台。
-2.  在管理控制台左上角单击![](figures/icon-region-0.png)图标，选择区域和项目。
+2.  在管理控制台左上角单击![](figures/icon-region.png)图标，选择区域和项目。
 3.  单击“管理与部署 \> 云监控”。
 4.  单击页面左侧的“主机监控”，进入主机监控页面。
 5.  单击ECS或BMS主机所在栏右侧的“更多”按钮，选择下拉出的“创建告警规则”。
