--- a/cn.zh-cn/用户指南/创建告警通知主题.md
+++ b/cn.zh-cn/用户指南/创建告警通知主题.md
@@ -5,7 +5,7 @@
 因此在创建告警规则之前，您首先需要在消息通知服务创建主题，并为这个主题添加相关的订阅者。
 
 >![](public_sys-resources/icon-note.gif) **说明：**   
->如您计划使用已创建的订阅主题创建告警规则，则可跳过此过程，直接进行[创建告警规则](创建告警规则.md)的步骤。  
+>如您计划使用已创建的订阅主题创建告警规则，则可跳过此过程，直接进行[告警规则简介](告警规则简介.md)的步骤。  
 
 -   **[创建主题](创建主题.md)**  
 
