--- a/cn.zh-cn/用户指南/查看监控图表.md
+++ b/cn.zh-cn/用户指南/查看监控图表.md
@@ -14,14 +14,14 @@
 
 1.  登录管理控制台。
 2.  单击“管理与部署 \> 云监控”。
-3.  在“主机监控”页面，单击资源所在行的“监控状态”开关，开启“操作系统监控”功能。
+3.  在“主机监控”页面，单击资源所在行的“监控状态”开关，开启“操作系统监控”与“进程监控”功能。
 4.  单击云服务资源所在行的“查看监控图表”，进入“操作系统监控”页面，如[图1](#fig10673024113818)所示。
 
     如要查看ECS自带的监控指标，可以单击“操作系统监控”右侧的“基础监控”，如[图2](#fig547204212396)所示。
 
 5.  在“操作系统监控”页面上方，分为CPU、CPU负载、内存、磁盘、磁盘I/O、网卡、GPU等不同类型的监控指标。
 
-    可查看不同监控指标“近1小时”、“近3小时”和“近12小时”的原始监控数据曲线图。您可以选择是否开启“自动刷新”功能，云监控提供了“10秒”“30秒”“1分钟”三个自动刷新周期。
+    可查看不同监控指标“近1小时”、“近3小时”和“近12小时”的原始监控数据曲线图。您可以选择是否开启“自动刷新”功能，云监控提供了“10秒”自动刷新周期。
 
     **图 1**  操作系统监控<a name="fig10673024113818"></a>  
     ![](figures/操作系统监控.png "操作系统监控")
@@ -29,9 +29,9 @@
     **图 2**  基础监控<a name="fig547204212396"></a>  
     ![](figures/基础监控.png "基础监控")
 
-6.  在监控指标视图右上角，单击![](figures/ywx458382-云计算开发部-公有云_IaaS-image-daf70e00-572c-4f31-82a3-a24bcddc0a1a-2.png)可查看监控指标视图详情。
+6.  在监控指标视图右上角，单击![](figures/放大.png)可查看监控指标视图详情。
 
-    页面左上方提供查看“近1小时”、“近3小时”、“近12小时”、“近24小时”、“近1周”和“近1月”6个固定时长的监控周期，同时也支持以通过“自定义时间段”选择查看近六个月内任意时间段的历史监控数据。
+    页面左上方提供查看“近1小时”、“近3小时”、“近12小时”、“近24小时”、“近7天”和“近30天”6个固定时长的监控周期，同时也支持以通过“自定义时间段”选择查看近六个月内任意时间段的历史监控数据。
 
     选择页面左上方的“设置”按钮，进入“聚合”设置页面，对监控数据的聚合方法进行更改。
 
