--- a/cn.zh-cn/用户指南/查看监控视图.md
+++ b/cn.zh-cn/用户指南/查看监控视图.md
@@ -12,7 +12,7 @@
     >-   用户可根据业务需求，拖动其中的监控视图，调整监控视图的顺序。  
     >-   单击监控视图上方的“近1小时”、“近3小时”、“近12小时”、“近7天”、“近30天”，可切换该监控面板下的所有视图的监控周期。  
 
-4.  在监控视图右上角，单击![](figures/zh-cn_image_0084572200.png)，进入监控项详情页面。您可以选择系统提供的固定时长或自定义时间段来查看云服务的监控周期内的走势图。
+4.  在监控视图右上角，单击![](figures/放大.png)，进入监控项详情页面。您可以选择系统提供的固定时长或自定义时间段来查看云服务的监控周期内的走势图。
 
     其中“近1小时”以内的监控时长系统默认显示原始指标数据，其他时长周期默认显示聚合指标数据。
 
