--- a/cn.zh-cn/用户指南/查看进程监控.md
+++ b/cn.zh-cn/用户指南/查看进程监控.md
@@ -15,7 +15,7 @@
 4.  在“主机监控”页面，单击资源所在行的“监控状态”开关，开启“操作系统监控”功能。
 5.  单击资源所在行的“查看监控图表”，进入“操作系统监控”页面。
 6.  单击“操作系统监控”右侧的“进程监控”，进入“进程监控”页面。
-7.  单击“进程监控列表”右侧的![](figures/zh-cn_image_0092643387.png)，进入TOP进程列表。
+7.  单击“进程监控列表”右侧的![](figures/设置.png)，进入TOP进程列表。
 8.  在TOP进程列表中选择您要开启的“进程监控开关”，单击确定。
 9.  在“进程列表”页面，系统会默认勾选状态为“运行中”的进程，在下方的监控图表中显示出当前进程的“近1小时”CPU使用率的原始监控数据曲线图。
 
@@ -141,7 +141,7 @@
     </tbody>
     </table>
 
-10. 在监控指标视图右上角，单击![](figures/zh-cn_image_0092650277.png)可查看监控指标视图详情。
+10. 在监控指标视图右上角，单击![](figures/放大.png)可查看监控指标视图详情。
 
     页面左上方提供查看“近1小时”、“近3小时”、“近12小时”、“近24小时”、“近7天”和“近30天”6个固定时长的监控周期，同时也支持以通过“自定义时间段”选择查看近六个月内任意时间段的历史监控数据。
 
