--- a/cn.zh-cn/用户指南/添加监控视图.md
+++ b/cn.zh-cn/用户指南/添加监控视图.md
@@ -8,7 +8,7 @@
 
 1.  登录管理控制台。
 2.  单击“管理与部署 \> 云监控”。
-3.  选择“总览 \> 监控面板”，切换到需要添加监控视图的监控面板，然后单击![](figures/zh-cn_image_0084572303.png)，或单击“添加监控视图”。
+3.  选择“总览 \> 监控面板”，切换到需要添加监控视图的监控面板，然后单击![](figures/添加.png)，或单击“添加监控视图”。
 
     系统弹出“添加监控视图”窗口。
 
@@ -72,6 +72,6 @@
 
 5.  单击“确定”，完成监控视图的添加。
 
-    监控面板上可以查看新添加监控视图的监控走势图，单击![](figures/zh-cn_image_0084572280.png)，可放大查看详细的指标对比数据。
+    监控面板上可以查看新添加监控视图的监控走势图，单击![](figures/放大.png)，可放大查看详细的指标对比数据。
 
 
