--- a/cn.zh-cn/用户指南/站点监控.md
+++ b/cn.zh-cn/用户指南/站点监控.md
@@ -4,7 +4,7 @@
 
 -   **[创建站点监控](创建站点监控.md)**  
 
--   **[创建告警规则（站点监控）](创建告警规则（站点监控）.md)**  
+-   **[创建告警规则](创建告警规则-1.md)**  
 
 -   **[查看站点监控](查看站点监控.md)**  
 
