--- a/cn.zh-cn/用户指南/自定义监控.md
+++ b/cn.zh-cn/用户指南/自定义监控.md
@@ -24,6 +24,6 @@
 2.  单击“管理与部署 \> 云监控”。
 3.  单击页面左侧的“自定义监控”。
 4.  在“自定义监控”页面，单击待创建的云服务资源所在行的“创建告警规则”。
-5.  在“创建告警规则”页面，根据界面提示配置参数，具体参数说明请参见[表2](用户为某一监控指标创建自定义告警规则.md#table4534051437)  ~  [表3](用户为某一监控指标创建自定义告警规则.md#table7623731163957)。
+5.  在“创建告警规则”页面，根据界面提示配置参数，具体参数说明请参见[表2](用户为某一监控指标创建自定义告警规则.md#table4534051437)  \~  [表3](用户为某一监控指标创建自定义告警规则.md#table7623731163957)。
 6.  单击“创建”，完成告警规则的创建。
 
