--- a/cn.zh-cn/用户指南/虚拟私有云的监控指标.md
+++ b/cn.zh-cn/用户指南/虚拟私有云的监控指标.md
@@ -18,6 +18,7 @@
 <tbody><tr id="row6451111141412"><td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.1 "><p id="p038121641416"><a name="p038121641416"></a><a name="p038121641416"></a>出网带宽（已废弃）</p>
 </td>
 <td class="cellrowborder" valign="top" width="35%" headers="mcps1.2.6.1.2 "><p id="p8483191441612"><a name="p8483191441612"></a><a name="p8483191441612"></a>该指标用于统计测试对象出云平台的网络速度（原指标为上行带宽）。</p>
+<p id="p1738001814508"><a name="p1738001814508"></a><a name="p1738001814508"></a>该指标用于华北-北京一、华东-上海二、华南-广州。</p>
 </td>
 <td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.6.1.3 "><p id="p940181671414"><a name="p940181671414"></a><a name="p940181671414"></a>≥ 0 bytes/s</p>
 </td>
@@ -29,6 +30,7 @@
 <tr id="row9653101451418"><td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.1 "><p id="p9421161147"><a name="p9421161147"></a><a name="p9421161147"></a>入网带宽（已废弃）</p>
 </td>
 <td class="cellrowborder" valign="top" width="35%" headers="mcps1.2.6.1.2 "><p id="p1143816191415"><a name="p1143816191415"></a><a name="p1143816191415"></a>该指标用于统计测试对象入云平台的网络速度（原指标为下行带宽）。</p>
+<p id="p11957548201"><a name="p11957548201"></a><a name="p11957548201"></a>该指标用于华北-北京一、华东-上海二、华南-广州。</p>
 </td>
 <td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.6.1.3 "><p id="p20441016151411"><a name="p20441016151411"></a><a name="p20441016151411"></a>≥ 0 bytes/s</p>
 </td>
