--- a/cn.zh-cn/用户指南/配置监控视图.md
+++ b/cn.zh-cn/用户指南/配置监控视图.md
@@ -5,9 +5,9 @@
 ## 操作步骤<a name="section25055851141356"></a>
 
 1.  登录管理控制台。
-2.  在管理控制台左上角单击![](figures/zh-cn_image_0107462820.png)图标，选择区域和项目。
+2.  在管理控制台左上角单击![](figures/icon-region.png)图标，选择区域和项目。
 3.  单击“管理与部署 \> 云监控”。
-4.  单击页面左侧的监控面板，选择需要修改的监控面板，在待配置的“监控视图”区域单击![](figures/zh-cn_image_0084572335.png)，弹出“配置监控视图”页面。
+4.  单击页面左侧的监控面板，选择需要修改的监控面板，在待配置的“监控视图”区域单击![](figures/设置.png)，弹出“配置监控视图”页面。
 
 在该页面，用户可以对监控视图标题进行编辑，也可以增加监控指标、删除监控指标或修改当前已添加的监控指标。
 
