--- a/cn.zh-cn/用户指南/使用告警模板创建告警规则.md
+++ b/cn.zh-cn/用户指南/使用告警模板创建告警规则.md
@@ -46,7 +46,7 @@
         <tr id="row1025034911317"><td class="cellrowborder" valign="top" width="16.6%" headers="mcps1.2.4.1.1 "><p id="p0250134963117"><a name="p0250134963117"></a><a name="p0250134963117"></a>监控范围</p>
         </td>
         <td class="cellrowborder" valign="top" width="50.07%" headers="mcps1.2.4.1.2 "><p id="p32501849173111"><a name="p32501849173111"></a><a name="p32501849173111"></a>告警规则适用的资源范围，可选择资源分组或指定资源。</p>
-        <div class="note" id="note1635393193413"><a name="note1635393193413"></a><a name="note1635393193413"></a><span class="notetitle"> 说明： </span><div class="notebody"><a name="ul64399549269"></a><a name="ul64399549269"></a><ul id="ul64399549269"><li>当选择资源分组时，该分组下任何资源满足告警策略时，都会触发告警通知。</li><li>资源分组不支持通过模板创建告警规则。</li><li>监控范围暂只支持华南-广州、华东-上海二，其他区域暂不支持。</li></ul>
+        <div class="note" id="note1635393193413"><a name="note1635393193413"></a><a name="note1635393193413"></a><span class="notetitle"> 说明： </span><div class="notebody"><a name="ul64399549269"></a><a name="ul64399549269"></a><ul id="ul64399549269"><li>当选择资源分组时，该分组下任何资源满足告警策略时，都会触发告警通知。</li><li>资源分组不支持通过模板创建告警规则。</li></ul>
         </div></div>
         </td>
         <td class="cellrowborder" valign="top" width="33.33%" headers="mcps1.2.4.1.3 "><p id="p172501749153113"><a name="p172501749153113"></a><a name="p172501749153113"></a>指定资源</p>
