--- a/cn.zh-cn/用户指南/创建主题.md
+++ b/cn.zh-cn/用户指南/创建主题.md
@@ -9,7 +9,7 @@
 ## 创建主题<a name="section1076552614204"></a>
 
 1.  登录管理控制台。
-2.  在管理控制台左上角单击![](figures/zh-cn_image_0111339496.png)图标，选择区域和项目。
+2.  在管理控制台左上角单击![](figures/定位图标.png)图标，选择区域和项目。
 3.  选择“应用服务” \> “消息通知服务”。
 
     进入消息通知服务页面。
