--- a/cn.zh-cn/用户指南/创建站点监控.md
+++ b/cn.zh-cn/用户指南/创建站点监控.md
@@ -90,7 +90,7 @@
     <tr id="row133231356574"><td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.4.1.1 "><p id="p332175155712"><a name="p332175155712"></a><a name="p332175155712"></a>高级配置</p>
     </td>
     <td class="cellrowborder" valign="top" width="52%" headers="mcps1.2.4.1.2 "><p id="p732114565715"><a name="p732114565715"></a><a name="p732114565715"></a>不同站点类型对应的高级配置不同。</p>
-    <a name="ul11323115195716"></a><a name="ul11323115195716"></a><ul id="ul11323115195716"><li>当站点类型为HTTP协议时，请参见<a href="#ZH-CN_TOPIC_0090245400__table1632335195715">表2</a>。</li><li>当站点类型为TCP协议时，请参见<a href="#ZH-CN_TOPIC_0090245400__table83287512573">表3</a>。</li><li>当站点类型为UDP协议时，请参见<a href="#ZH-CN_TOPIC_0090245400__table13328165135714">表4</a>。</li></ul>
+    <a name="ul11323115195716"></a><a name="ul11323115195716"></a><ul id="ul11323115195716"><li>当站点类型为HTTP协议时，请参见<a href="#table1632335195715">表2</a>。</li><li>当站点类型为TCP协议时，请参见<a href="#table83287512573">表3</a>。</li><li>当站点类型为UDP协议时，请参见<a href="#table13328165135714">表4</a>。</li></ul>
     </td>
     <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="p183231952571"><a name="p183231952571"></a><a name="p183231952571"></a>-</p>
     </td>
