--- a/cn.zh-cn/用户指南/创建资源分组.md
+++ b/cn.zh-cn/用户指南/创建资源分组.md
@@ -19,7 +19,7 @@
 ## 操作步骤<a name="section17220135318513"></a>
 
 1.  登录管理控制台。
-2.  在管理控制台左上角单击![](figures/zh-cn_image_0102575593.png)图标，选择区域和项目。
+2.  在管理控制台左上角单击![](figures/icon-region.png)图标，选择区域和项目。
 3.  单击“管理与部署 \> 云监控”。
 4.  单击页面左侧的“资源分组”，进入“资源分组”页面。
 5.  单击页面右上角的“创建资源分组”按钮。
