--- a/cn.zh-cn/用户指南/删除监控视图.md
+++ b/cn.zh-cn/用户指南/删除监控视图.md
@@ -2,5 +2,5 @@
 
 1.  登录管理控制台。
 2.  单击“管理与部署 \> 云监控”。
-3.  单击页面左侧的监控面板，选择需要删除的监控面板，在待删除的“监控视图”区域，单击右上角的![](figures/zh-cn_image_0084572185.png)，选择“确认”删除该监控视图。
+3.  单击页面左侧的监控面板，选择需要删除的监控面板，在待删除的“监控视图”区域，单击右上角的![](figures/删除.png)，选择“确认”删除该监控视图。
 
