--- a/cn.zh-cn/用户指南/查看云监控日志.md
+++ b/cn.zh-cn/用户指南/查看云监控日志.md
@@ -9,7 +9,7 @@
 ## 操作步骤<a name="section6300091795238"></a>
 
 1.  登录管理控制台。
-2.  在管理控制台左上角单击![](figures/zh-cn_image_0071377423.png)图标，选择区域和项目。
+2.  在管理控制台左上角单击![](figures/icon-region.png)图标，选择区域和项目。
 3.  单击“服务列表”，选择“管理与部署 \> 云审计服务”，进入云审计服务信息页面。
 4.  单击左侧导航树的“事件列表”，进入事件列表信息页面。
 5.  事件列表支持通过筛选来查询对应的操作事件。当前事件列表支持四个维度的组合查询，详细信息如下：
@@ -28,7 +28,7 @@
     -   事件级别：可选项为“所有事件级别”、“normal”、“warning”、“incident”，只可选择其中一项。
     -   时间范围：可选择查询最近七天内任意时间段的操作事件。
 
-6.  在需要查看的记录左侧，单击![](figures/zh-cn_image_0110317527.jpg)展开该记录的详细信息，展开记录如[图1](#fig19435134913612)所示。
+6.  在需要查看的记录左侧，单击![](figures/展开.jpg)展开该记录的详细信息，展开记录如[图1](#fig19435134913612)所示。
 
     **图 1**  展开记录<a name="fig19435134913612"></a>  
     ![](figures/展开记录.jpg "展开记录")
@@ -36,6 +36,6 @@
 7.  在需要查看的记录右侧，单击“查看事件”，弹出一个窗口，如[图2](#fig2462413101713)所示，显示了该操作事件结构的详细信息。
 
     **图 2**  查看事件<a name="fig2462413101713"></a>  
-    ![](figures/查看事件-1.png "查看事件-1")
+    ![](figures/查看事件-2.png "查看事件-2")
 
 
