--- a/cn.zh-cn/用户指南/用户为某一监控指标创建自定义告警规则.md
+++ b/cn.zh-cn/用户指南/用户为某一监控指标创建自定义告警规则.md
@@ -41,7 +41,7 @@
         <tr id="row628311193011"><td class="cellrowborder" valign="top" width="16.6%" headers="mcps1.2.4.1.1 "><p id="p0250134963117"><a name="p0250134963117"></a><a name="p0250134963117"></a>监控范围</p>
         </td>
         <td class="cellrowborder" valign="top" width="50.07%" headers="mcps1.2.4.1.2 "><p id="p32501849173111"><a name="p32501849173111"></a><a name="p32501849173111"></a>告警规则适用的资源范围，可选择资源分组或指定资源。</p>
-        <div class="note" id="note1635393193413"><a name="note1635393193413"></a><a name="note1635393193413"></a><span class="notetitle"> 说明： </span><div class="notebody"><a name="ul64399549269"></a><a name="ul64399549269"></a><ul id="ul64399549269"><li>当选择资源分组时，该分组下任何资源满足告警策略时，都会触发告警通知。</li><li>监控范围暂只支持华南-广州、华东-上海二，其他区域暂不支持。</li></ul>
+        <div class="note" id="note1635393193413"><a name="note1635393193413"></a><a name="note1635393193413"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p17599171716296"><a name="p17599171716296"></a><a name="p17599171716296"></a>当选择资源分组时，该分组下任何资源满足告警策略时，都会触发告警通知。</p>
         </div></div>
         </td>
         <td class="cellrowborder" valign="top" width="33.33%" headers="mcps1.2.4.1.3 "><p id="p172501749153113"><a name="p172501749153113"></a><a name="p172501749153113"></a>指定资源</p>
@@ -118,8 +118,6 @@
         </td>
         <td class="cellrowborder" valign="top" width="50%" headers="mcps1.2.4.1.2 "><p id="p7658165024912"><a name="p7658165024912"></a><a name="p7658165024912"></a>该告警规则仅在生效时间内发送通知消息。</p>
         <p id="p52121744532"><a name="p52121744532"></a><a name="p52121744532"></a>如生效时间为00:00-8:00，则该告警规则仅在00:00-8:00发送通知消息。</p>
-        <div class="note" id="note12151144012503"><a name="note12151144012503"></a><a name="note12151144012503"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p14151204019503"><a name="p14151204019503"></a><a name="p14151204019503"></a>生效时间暂只支持华南-广州、华东-上海二，其他区域暂不支持。</p>
-        </div></div>
         </td>
         <td class="cellrowborder" valign="top" width="33%" headers="mcps1.2.4.1.3 "><p id="p96581505499"><a name="p96581505499"></a><a name="p96581505499"></a>-</p>
         </td>
